# CircuitSimulation

./: .clang-format  CMakeLists.txt  README.md  build.sh
cmake/: FindGoogleTest.cmake
include/nts/: AComponent.hpp  IComponent.hpp
src/: AndComponent.cpp  AndComponent.hpp  CMakeLists.txt  ClockComponent.cpp  ClockComponent.hpp  FalseComponent.cpp  FalseComponent.hpp  Gate4001.cpp  Gate4001.hpp  Gate4011.cpp  Gate4011.hpp  Gate4030.cpp  Gate4030.hpp  Gate4069.cpp  Gate4069.hpp  Gate4071.cpp  Gate4071.hpp  Gate4081.cpp  Gate4081.hpp  InputComponent.cpp  InputComponent.hpp  NandComponent.cpp  NandComponent.hpp  NorComponent.cpp  NorComponent.hpp  NotComponent.cpp  NotComponent.hpp  OrComponent.cpp  OrComponent.hpp  OutputComponent.cpp  OutputComponent.hpp  TrueComponent.cpp  TrueComponent.hpp  XorComponent.cpp  XorComponent.hpp  main.cpp
tests/: CMakeLists.txt  main_test.cpp
